--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ dotenv==0.9.9
 drf-spectacular==0.28.0
 et_xmlfile==2.0.0
 fonttools==4.60.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -74,5 +75,6 @@ vine==5.1.0
 wcwidth==0.2.13
 weasyprint==66.0
 webencodings==0.5.1
+whitenoise==6.11.0
 xlsxwriter==3.2.9
 zopfli==0.2.3.post1
